@@ -203,6 +203,7 @@ sub pandora_wmi_producer ($) {
 			$query1 = "SELECT
 				tagente_modulo.id_agente_modulo,
 				tagente_modulo.flag
+				UNIX_TIMESTAMP() - tagente_estado.current_interval - tagente_estado.last_execution_try  AS time_left  
 			FROM
 				tagente, tagente_modulo, tagente_estado
 			WHERE
@@ -223,11 +224,11 @@ sub pandora_wmi_producer ($) {
 					tagente_modulo.flag = 1
 			)				
 			ORDER BY
-					last_execution_try ASC  ";
+					tagente_modulo.flag DESC, time_left DESC, last_execution_try ASC  ";
 		} else {
 			# Query for MASTER SERVER !
 			$query1 = "SELECT
-					DISTINCT(tagente_modulo.id_agente_modulo), tagente_modulo.flag
+					DISTINCT(tagente_modulo.id_agente_modulo), tagente_modulo.flag, UNIX_TIMESTAMP() - tagente_estado.current_interval - tagente_estado.last_execution_try  AS time_left  
 				FROM
 					tagente, tagente_modulo, tagente_estado, tserver
 				WHERE
@@ -243,7 +244,8 @@ sub pandora_wmi_producer ($) {
 					tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
 				AND
 					((tagente_estado.last_execution_try + tagente_estado.current_interval) < UNIX_TIMESTAMP() OR tagente_modulo.flag = 1 )
-				ORDER BY last_execution_try ASC";
+				ORDER BY 
+					tagente_modulo.flag DESC, time_left DESC, last_execution_try ASC";
 		}
 		$exec_sql1 = $dbh->prepare($query1);
 		$exec_sql1 ->execute;
